@@ -1,5 +1,5 @@
 AC_INIT(Makefile.am)
-AM_INIT_AUTOMAKE(libavc1394, 0.5.1)
+AM_INIT_AUTOMAKE(libavc1394, 0.5.2)
 AM_CONFIG_HEADER(config.h)
 AM_MAINTAINER_MODE
 
@@ -14,9 +14,9 @@ AC_CHECK_HEADERS(sys/time.h sys/types.h unistd.h string.h netinet/in.h stdio.h)
 PKG_CHECK_MODULES(LIBRAW1394, libraw1394 >= 1.0.0)
 
 #set the libtool shared library version numbers
-lt_major=2
-lt_revision=1
-lt_age=2
+lt_major=3
+lt_revision=0
+lt_age=3
 
 AC_SUBST(lt_major)
 AC_SUBST(lt_revision)
