@@ -1,5 +1,13 @@
 libavc1394 ChangeLog
 
+2005-07-02 Dan Dennedy <dan@dennedy.org>
+	* libavc1394/avc1394_internal.[hc], libavc1394/avc1394_simple.[hc],
+	  libavc1394/avc1349_vcr.c, test/dvcont.c: remove global variables used
+	  for FCP/AVC transactions, which helps prevent the host order byte swapped
+	  data from being overwritten; adjust the locations of start/stop FCP in
+	  in order to minimize chance of overlapping responses.
+	* libavc1394/avc1394_vcr.c: return error when timecode is all 0xffffffff.
+
 0.5.1 release
 
 2005-06-13 Dan Dennedy <dan@dennedy.org>
